# BPlusTreeMap4

./: .gitignore  Cargo.toml  DEBUG_PLAN.md  README.md  STATUS_REPORT.md  agent.md  profile_10m.json
docs/: ALIGNMENT_EXPERIMENT.md  API_TEST_MIGRATION_PLAN.md  DOUBLE_FREE_ANALYSIS.md  LEAF_SPLIT_REFACTOR_PLAN.md  PERFORMANCE_TUNING_PLAN.md  PREFETCH_EXPERIMENT.md  PRE_COMMIT_HOOK.md  PROFILING_FAQ.md  PROFILING_RESULTS.md  REFACTORING_LESSONS.md  RELIABILITY_ASSESSMENT.md  TEST_PROGRESS.md  interleaved-layout-analysis.md  profiling-findings.md
logs/: test-20250919-143809Z.txt  test-20250919-143855Z.txt
scripts/: comprehensive_benchmark.sh  run_and_log_tests.sh
src/: common.rs  delete.rs  get.rs  insert.rs  iterate.rs  layout.rs  lib.rs  node_alloc.rs
tests/: README.md  adversarial_arena_corruption.rs  adversarial_branch_rebalancing.rs  borrowing_double_free_test.rs  bplus_tree.rs  bug_reproduction_tests.rs  capacity_check_test.rs  critical_bug_test.rs  debug_infinite_loop.rs  drop_and_clear_tests.rs  fuzz_tests.rs  memory_leak_detection.rs  memory_safety_audit.rs  range_differential.rs  remove_operations.rs  simple_bug_tests.rs  specific_bug_demos.rs  test_utils.rs
