[package]
name = "bplustree"
version = "0.1.0"
edition = "2021"
description = "Raw-memory B+ tree map with fixed-size nodes"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]

[features]
default = ["std", "compat_test_api"]
std = []
# Enables test-only compatibility APIs used by the imported test suites.
compat_test_api = []
